Tue Aug  2 21:37:37 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/LargeScale:
        * tutorials/LargeScale/LargeScale.xme:

          Initial version of large scale model.

Mon Aug  1 19:12:27 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Updated script to work with Python 3.

Mon Aug  1 16:24:43 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          The configuration file is written to the prefix location.

Mon Aug  1 16:17:25 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Added support for downloading Boost and Xerces-C.

Mon Aug  1 13:45:38 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

          Updated the description of property elements.

Mon Aug  1 04:47:07 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

          Fixed errors in the explanation.

Mon Aug  1 04:38:26 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/analysis/example.datagraph:
        * docs/manual/analysis/unite.tex:

          Fixed grammatical and spelling errors.

        * docs/manual/manual.pdf:
        * docs/manual/manual.tex:
        * docs/manual/modeling.tex:
        * docs/manual/modeling/figs/collocationgroup.png:
        * docs/manual/modeling/figs/componentassembly.png:
        * docs/manual/modeling/figs/componentassemblyref.png:
        * docs/manual/modeling/figs/componentref.png:
        * docs/manual/modeling/figs/node.png:
        * docs/manual/modeling/figs/property.png:
        * docs/manual/modeling/quick-ref.tex:

          Finished first version of the PICML quick reference.
