@@ -2,9 +2,11 @@
 
 workspace (CUTS_Runtime_Arch) {
   cmdline += -include $CUTS_ROOT/MPC/config \
+             -include $CUTS_ROOT/contrib/CCF/MPC/config\
+             -include $ADBC_ROOT/MPC/config \
              -include $XSC_ROOT/MPC/config \
              -feature_file $CUTS_ROOT/default.features
-			 
+
   cuts/CUTS.mpc
   cuts/arch
   cuts/idl
